fixing margins on ul and ol on mobile
Former-commit-id: 8fa699eec8be637ceec1812b59acbf806ac78755 [formerly 205eba88659a6e5e80a8b022538eeb00e0e14344] [formerly 8f839a4c1e37a9e9277e2e814cfa6b1a6a1b8c17 [formerly 5a1a65ff4c0b4e95dcc831fe55ee264aa3d8b14e]]
Former-commit-id: 12587c227038034328cf49d048345c869a27d267 [formerly a0260a5e10f05d67d3057cd1d1dfc15080cc0c17]
Former-commit-id: 8d2f52de333c893cfbcebbb55e331decc290b41b

--- a/public/css/sass/partials/_media-queries.sass
+++ b/public/css/sass/partials/_media-queries.sass
@@ -15,20 +15,19 @@
 		width: calc(90% - 3em)
 		padding: 1.5em
 
-	header.postheader
-		h2
-			font-size: 1.6em
+	header.postheader h2
+		font-size: 1.6em
 
-	header.postheaderlinked
-		h2
-			font-size: 1.5em
+	header.postheaderlinked h2
+		font-size: 1.5em
 
 	img.small
 		max-width: 100%
 
-	ul,ol
-		margin-left: 0.5em
-		padding-left: 0.75em
+	.entry
+		ul, ol
+			margin-left: 0.5em
+			padding-left: 0.75em
 
 	li
 		padding-left: 0
